--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,66 +1,121 @@
 /**
- * Copyright (C) 2014 wak
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * The first line in the build configuration applies the Android Gradle plugin
+ * to this build and makes the android block available to specify
+ * Android-specific build options.
  */
-apply plugin: 'com.android.application'
+
+plugins {
+    id 'com.android.application'
+}
+
+/**
+ * Locate (and possibly download) a JDK used to build your kotlin
+ * source code. This also acts as a default for sourceCompatibility,
+ * targetCompatibility and jvmTarget. Note that this does not affect which JDK
+ * is used to run the Gradle build itself, and does not need to take into
+ * account the JDK version required by Gradle plugins (such as the
+ * Android Gradle Plugin)
+ */
+//kotlin {
+//    jvmToolchain 11
+//}
+
+/**
+ * The android block is where you configure all your Android-specific
+ * build options.
+ */
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.1'
+
+    /**
+     * The app's namespace. Used primarily to access app resources.
+     */
+
+    namespace 'eu.fliegendewurst.tinyclock'
+
+    /**
+     * compileSdk specifies the Android API level Gradle should use to
+     * compile your app. This means your app can use the API features included in
+     * this API level and lower.
+     */
+
+    compileSdk 33
+
+    /**
+     * The defaultConfig block encapsulates default settings and entries for all
+     * build variants and can override some attributes in main/AndroidManifest.xml
+     * dynamically from the build system. You can configure product flavors to override
+     * these values for different versions of your app.
+     */
 
     defaultConfig {
-        applicationId "com.github.wakhub.tinyclock"
-        minSdkVersion 17
-        targetSdkVersion 21
-        versionCode 6
-        versionName "1.3.0"
+
+        // Uniquely identifies the package for publishing.
+        applicationId 'eu.fliegendewurst.tinyclock'
+
+        // Defines the minimum API level required to run the app.
+        minSdk 21
+
+        // Specifies the API level used to test the app.
+        targetSdk 33
+
+        // Defines the version number of your app.
+        versionCode 1
+
+        // Defines a user-friendly version name for your app.
+        versionName "1.0"
     }
 
-    signingConfigs {
-        release {
-        }
-    }
-
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError false
-    }
+    /**
+     * The buildTypes block is where you can configure multiple build types.
+     * By default, the build system defines two build types: debug and release. The
+     * debug build type is not explicitly shown in the default build configuration,
+     * but it includes debugging tools and is signed with the debug key. The release
+     * build type applies ProGuard settings and is not signed by default.
+     */
 
     buildTypes {
+
+        /**
+         * By default, Android Studio configures the release build type to enable code
+         * shrinking, using minifyEnabled, and specifies the default ProGuard rules file.
+         */
+
         debug {
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
         }
+
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+            minifyEnabled true // Enables code shrinking for the release build type.
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    /**
+     * To override source and target compatibility (if different from the
+     * tool chain JDK version), add the following. All of these
+     * default to the same value as kotlin.jvmToolchain. If you're using the
+     * same version for these values and kotlin.jvmToolchain, you can
+     * remove these blocks.
+     */
+    //compileOptions {
+    //    sourceCompatibility JavaVersion.VERSION_11
+    //    targetCompatibility JavaVersion.VERSION_11
+    //}
+    //kotlinOptions {
+    //    jvmTarget = '11'
+    //}
 }
+
+/**
+ * The dependencies block in the module-level build configuration file
+ * specifies dependencies required to build only the module itself.
+ * To learn more, go to Add build dependencies.
+ */
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile project(':android-support-v4-preferencefragmen')
-}
-
-File signingPropertiesFile = rootProject.file('credentials/release.keystore.properties')
-if (signingPropertiesFile.exists()) {
-    Properties props = new Properties()
-    props.load(new FileInputStream(signingPropertiesFile))
-    android.signingConfigs.release.storeFile = file(props.storeFile)
-    android.signingConfigs.release.storePassword = props.storePassword
-    android.signingConfigs.release.keyAlias = props.keyAlias
-    android.signingConfigs.release.keyPassword = props.keyPassword
+    //implementation project(":lib")
+    //implementation 'androidx.appcompat:appcompat:1.7.0'
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
