--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2014 wak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,28 +13,25 @@
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
-<manifest
-    package="com.github.wakhub.tinyclock"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="eu.fliegendewurst.tinyclock">
 
     <application
-        android:theme="@style/Theme.AppCompat"
         android:allowBackup="true"
-        android:icon="@drawable/preview"
-        android:label="@string/app_name">
+        android:icon="@android:drawable/ic_menu_my_calendar"
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Material.Light">
 
-        <receiver android:name=".TinyClockAppWidget">
+        <receiver
+            android:name="eu.fliegendewurst.tinyclock.TinyClockAppWidget"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/appwidget_info"/>
+                android:resource="@xml/appwidget_info" />
         </receiver>
-        <service android:name=".UpdateService"/>
-        <activity android:name=".SettingsActivity"/>
     </application>
 
 </manifest>
